--- a/index.html
+++ b/index.html
@@ -469,13 +469,15 @@
             >
             <address class="footer-address">
               <ul class="list">
-                <li>г. Киев, пр-т Леси Украинки, 26</li>
-                <li>
+                <li class="footer-address_item">
+                  г. Киев, пр-т Леси Украинки, 26
+                </li>
+                <li class="footer-address_item">
                   <a href="maito:info@example.com" class="link italic"
                     >info@example.com</a
                   >
                 </li>
-                <li>
+                <li class="footer-address_item">
                   <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
                 </li>
               </ul>
