--- a/index.html
+++ b/index.html
@@ -464,26 +464,84 @@
       <div class="container">
         <div class="footer-grid">
           <div class="footer-grid__part">
-            <a href="" class="logo footer-logo"
-              >Web<span class="part-logo part-logo--inverse">Studio</span></a
-            >
-            <address class="footer-address">
-              <ul class="list">
-                <li class="footer-address_item">
-                  г. Киев, пр-т Леси Украинки, 26
-                </li>
-                <li class="footer-address_item">
-                  <a href="maito:info@example.com" class="link italic"
-                    >info@example.com</a
+            <div class="footer-grid__address">
+              <a href="" class="logo footer-logo"
+                >Web<span class="part-logo part-logo--inverse">Studio</span></a
+              >
+              <address class="footer-address">
+                <ul class="list">
+                  <li class="footer-address_item">
+                    г. Киев, пр-т Леси Украинки, 26
+                  </li>
+                  <li class="footer-address_item">
+                    <a href="maito:info@example.com" class="link italic"
+                      >info@example.com</a
+                    >
+                  </li>
+                  <li class="footer-address_item">
+                    <a href="tel:+380991111111" class="link"
+                      >+38 099 111 11 11</a
+                    >
+                  </li>
+                </ul>
+              </address>
+            </div>
+            <div class="footer-socnetworks">
+              <h2 class="footer-socnetworks__title">присоединяйтесь</h2>
+              <ul class="list footer-socnetworks__list">
+                <li class="footer-socnetworks__item">
+                  <a
+                    href=""
+                    class="footer-socnetworks__link"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                    aria-label="instagram"
                   >
+                    <svg width="20px" height="20px">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="footer-address_item">
-                  <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
+                <li class="footer-socnetworks__item">
+                  <a
+                    href=""
+                    class="footer-socnetworks__link"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                    aria-label="twitter"
+                    ><svg width="20px" height="20px">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="footer-socnetworks__item">
+                  <a
+                    href=""
+                    class="footer-socnetworks__link"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                    aria-label="facebook"
+                    ><svg width="20px" height="20px">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="footer-socnetworks__item">
+                  <a
+                    href=""
+                    class="footer-socnetworks__link"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                    aria-label="linkedin"
+                    ><svg width="20px" height="20px">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
-            </address>
+            </div>
           </div>
-          <div class="footer-socnetworks footer-grid__part">
+          <!-- <div class="footer-socnetworks footer-grid__part">
             <h2 class="footer-socnetworks__title">присоединяйтесь</h2>
             <ul class="list footer-socnetworks__list">
               <li class="footer-socnetworks__item">
@@ -536,7 +594,7 @@
                 </a>
               </li>
             </ul>
-          </div>
+          </div> -->
           <div class="footer-subscription">
             <h2 class="footer-subscription__title">Подпишитесь на рассылку</h2>
             <form class="footer-form">
