--- a/index.html
+++ b/index.html
@@ -25,43 +25,76 @@
           <a href="./" class="logo link"
             >Web<span class="part-logo">Studio</span></a
           >
-          <ul class="site-nav list">
-            <li class="site-nav__item">
-              <a href="" class="site-nav__link link site-nav__link--current"
-                >Студия</a
-              >
-            </li>
-            <li class="site-nav__item">
-              <a href="./portfolio.html" class="site-nav__link link"
-                >Портфолио</a
-              >
-            </li>
-            <li class="site-nav__item">
-              <a href="" class="site-nav__link link">Контакты</a>
-            </li>
-          </ul>
-        </nav>
+          <button
+            type="button"
+            aria-expanded="false"
+            aria-controls="menu-container"
+            class="menu-btn is-open"
+            data-menu-button
+          >
+            <svg
+              width="40"
+              height="40"
+              aria-label="Переключатель мобильного меню"
+            >
+              <use
+                class="icon-close_menu"
+                href="./images/symbol-defs.svg#icon-close_menu"
+              ></use>
+              <use
+                class="icon-menu"
+                href="./images/symbol-defs.svg#icon-menu"
+              ></use>
+            </svg>
+          </button>
 
-        <ul class="coordinates-nav list">
-          <li class="coordinates-nav__item item-envelope">
-            <a
-              href="mailto:info@devstudio.com"
-              class="coordinates-nav__link link"
-              ><svg class="coordinates-nav__icon" width="16px" height="12px">
-                <use href="./images/symbol-defs.svg#icon-envelope"></use>
-              </svg>
-              info@devstudio.com
-            </a>
-          </li>
-          <li class="coordinates-nav__item item-smartphone">
-            <a href="tel:+380961111111" class="coordinates-nav__link link"
-              ><svg class="coordinates-nav__icon" width="10px" height="16px">
-                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
-              </svg>
-              +38 096 111 11 11
-            </a>
-          </li>
-        </ul>
+          <div class="menu-container" id="menu-container is-open" data-menu>
+            <ul class="site-nav list">
+              <li class="site-nav__item">
+                <a href="" class="site-nav__link link site-nav__link--current"
+                  >Студия</a
+                >
+              </li>
+              <li class="site-nav__item">
+                <a href="./portfolio.html" class="site-nav__link link"
+                  >Портфолио</a
+                >
+              </li>
+              <li class="site-nav__item">
+                <a href="" class="site-nav__link link">Контакты</a>
+              </li>
+            </ul>
+
+            <ul class="coordinates-nav list">
+              <li class="coordinates-nav__item item-envelope">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="coordinates-nav__link link"
+                  ><svg
+                    class="coordinates-nav__icon"
+                    width="16px"
+                    height="12px"
+                  >
+                    <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                  </svg>
+                  info@devstudio.com
+                </a>
+              </li>
+              <li class="coordinates-nav__item item-smartphone">
+                <a href="tel:+380961111111" class="coordinates-nav__link link"
+                  ><svg
+                    class="coordinates-nav__icon"
+                    width="10px"
+                    height="16px"
+                  >
+                    <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                  </svg>
+                  +38 096 111 11 11
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
       </div>
     </header>
     <main>
@@ -694,6 +727,7 @@
       </div>
     </div>
 
+    <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
