--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             type="button"
             aria-expanded="false"
             aria-controls="menu-container"
-            class="menu-btn is-open"
+            class="menu-btn"
             data-menu-button
           >
             <svg
@@ -69,7 +69,7 @@
               <li class="coordinates-nav__item item-envelope">
                 <a
                   href="mailto:info@devstudio.com"
-                  class="coordinates-nav__link link"
+                  class="coordinates-nav__link email link"
                   ><svg
                     class="coordinates-nav__icon"
                     width="16px"
@@ -91,6 +91,48 @@
                   </svg>
                   +38 096 111 11 11
                 </a>
+              </li>
+            </ul>
+            <ul class="socials-nav list">
+              <li class="socials-nav__item">
+                <a
+                  href=""
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  aria-label="instagram"
+                  class="socials-nav__link link"
+                  >Instagram</a
+                >
+              </li>
+              <li class="socials-nav__item">
+                <a
+                  href=""
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  aria-label="Twitter"
+                  class="socials-nav__link link"
+                  >Twitter</a
+                >
+              </li>
+              <li class="socials-nav__item">
+                <a
+                  href=""
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  aria-label="Facebook"
+                  class="socials-nav__link link"
+                  >Facebook</a
+                >
+              </li>
+              <li class="socials-nav__item">
+                <a
+                  href=""
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  aria-label="LinkedIn"
+                  class="socials-nav__link link"
+                  >LinkedIn</a
+                >
               </li>
             </ul>
           </div>
